# macos-keyboard-experiments

./: Cargo.toml
keyboard-events-processing/: Cargo.toml
keyboard-events-processing/src/: cgevent_tap_event_stream.rs  event_stream.rs  event_tap.rs  keycodes.rs  lib.rs
keyboard-layers-poc/: Cargo.toml
keyboard-layers-poc/src/: hardcoded_processor.rs  main.rs
typing-stats/: Cargo.toml
typing-stats/src/: main.rs  stats_processor.rs
